...
        android:layout_marginRight="0dp"
        android:paddingBottom="0dp"
        android:background="@color/purple_500">


        <LinearLayout
            android:id="@+id/text_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="20dp"
            android:orientation="vertical">

...
        android:id="@+id/linear_holder"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_new_receipt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/capture_new_receipt" />

...
