...
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:hint="@string/capture_receipt"
            />
        <Button
            android:visibility="gone"
            android:id="@+id/button_copy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/save_receipt_but"
            android:layout_margin="8dp"
            style="?android:attr/buttonBarButtonStyle" />
...
